demoproject_2/src/objects/PTO__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <inlineHelpText>Enter the last date of the PTO</inlineHelpText>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reason_for_Leave__c</fullName>
        <inlineHelpText>Enter the reason for PTO</inlineHelpText>
        <label>Reason for Leave</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <inlineHelpText>Enter the Start date for the PTO</inlineHelpText>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trainer__c</fullName>
        <inlineHelpText>Enter your name</inlineHelpText>
        <label>Trainer</label>
        <referenceTo>Trainer__c</referenceTo>
        <relationshipLabel>PTO&apos;s</relationshipLabel>
        <relationshipName>PTO_s</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>PTO</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Trainer__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Reason_for_Leave__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PTO&apos;s</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>EndDategreaterthanStartDate</fullName>
        <active>true</active>
        <errorConditionFormula>End_Date__c   &lt;  Start_Date__c</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>End Date has to be greater than equal to Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>StartDateHasToBeTodayOrInTheFuture</fullName>
        <active>true</active>
        <errorConditionFormula>Start_Date__c  &lt;  TODAY()</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>Start date has to be today or a date in the future only.</errorMessage>
    </validationRules>
</CustomObject>